[project]
name = "2048env"
version = "0.1.0"
description = "2048 Game Environment with Gymnasium API and WebSocket Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.0",
    "gymnasium>=0.29.0",
    "ray>=2.49.2",
    "numba>=0.59.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
]
